// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component Props containerStyle 1`] = `
<Component
  style={
    Object {
      "paddingHorizontal": 10,
      "width": 200,
    }
  }
>
  <AnimatedComponent
    style={
      Object {
        "alignItems": "center",
        "borderColor": "#86939e",
        "borderRadius": 50,
        "borderWidth": 1,
        "flexDirection": "row",
        "paddingBottom": 4,
        "paddingLeft": 12,
        "paddingRight": 12,
        "paddingTop": 4,
        "transform": Array [
          Object {
            "translateX": 0,
          },
        ],
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      style={
        Object {
          "alignSelf": "center",
          "color": "black",
          "flex": 1,
          "fontSize": 18,
          "minHeight": 40,
        }
      }
      testID="RNE__Input__text-input"
      underlineColorAndroid="transparent"
    />
  </AnimatedComponent>
</Component>
`;

exports[`Input component Props errorMessage and style errorMessage 1`] = `
<Component
  style={
    Object {
      "paddingHorizontal": 10,
      "width": "100%",
    }
  }
>
  <AnimatedComponent
    style={
      Object {
        "alignItems": "center",
        "borderColor": "#86939e",
        "borderRadius": 50,
        "borderWidth": 1,
        "flexDirection": "row",
        "paddingBottom": 4,
        "paddingLeft": 12,
        "paddingRight": 12,
        "paddingTop": 4,
        "transform": Array [
          Object {
            "translateX": 0,
          },
        ],
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      style={
        Object {
          "alignSelf": "center",
          "color": "black",
          "flex": 1,
          "fontSize": 18,
          "minHeight": 40,
        }
      }
      testID="RNE__Input__text-input"
      underlineColorAndroid="transparent"
    />
  </AnimatedComponent>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#ff190c",
        "fontSize": 12,
        "margin": 5,
      }
    }
  >
    My Error Message
  </Text>
</Component>
`;

exports[`Input component Props errorMessage and style errorStyle 1`] = `
<Component
  style={
    Object {
      "paddingHorizontal": 10,
      "width": "100%",
    }
  }
>
  <AnimatedComponent
    style={
      Object {
        "alignItems": "center",
        "borderColor": "#86939e",
        "borderRadius": 50,
        "borderWidth": 1,
        "flexDirection": "row",
        "paddingBottom": 4,
        "paddingLeft": 12,
        "paddingRight": 12,
        "paddingTop": 4,
        "transform": Array [
          Object {
            "translateX": 0,
          },
        ],
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      style={
        Object {
          "alignSelf": "center",
          "color": "black",
          "flex": 1,
          "fontSize": 18,
          "minHeight": 40,
        }
      }
      testID="RNE__Input__text-input"
      underlineColorAndroid="transparent"
    />
  </AnimatedComponent>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#ff190c",
        "fontSize": 12,
        "margin": 5,
        "width": 200,
      }
    }
  >
    My Error Message
  </Text>
</Component>
`;

exports[`Input component Props inputComponent 1`] = `
<Component
  style={
    Object {
      "paddingHorizontal": 10,
      "width": "100%",
    }
  }
>
  <AnimatedComponent
    style={
      Object {
        "alignItems": "center",
        "borderColor": "#86939e",
        "borderRadius": 50,
        "borderWidth": 1,
        "flexDirection": "row",
        "paddingBottom": 4,
        "paddingLeft": 12,
        "paddingRight": 12,
        "paddingTop": 4,
        "transform": Array [
          Object {
            "translateX": 0,
          },
        ],
      }
    }
  >
    <CustomComponent
      style={
        Object {
          "alignSelf": "center",
          "color": "black",
          "flex": 1,
          "fontSize": 18,
          "minHeight": 40,
        }
      }
      testID="RNE__Input__text-input"
      underlineColorAndroid="transparent"
    />
  </AnimatedComponent>
</Component>
`;

exports[`Input component Props inputContainerStyle 1`] = `
<Component
  style={
    Object {
      "paddingHorizontal": 10,
      "width": "100%",
    }
  }
>
  <AnimatedComponent
    style={
      Object {
        "alignItems": "center",
        "borderColor": "#86939e",
        "borderRadius": 50,
        "borderWidth": 1,
        "flexDirection": "row",
        "paddingBottom": 4,
        "paddingLeft": 12,
        "paddingRight": 12,
        "paddingTop": 4,
        "transform": Array [
          Object {
            "translateX": 0,
          },
        ],
        "width": 200,
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      style={
        Object {
          "alignSelf": "center",
          "color": "black",
          "flex": 1,
          "fontSize": 18,
          "minHeight": 40,
        }
      }
      testID="RNE__Input__text-input"
      underlineColorAndroid="transparent"
    />
  </AnimatedComponent>
</Component>
`;

exports[`Input component Props inputStyle 1`] = `
<Component
  style={
    Object {
      "paddingHorizontal": 10,
      "width": "100%",
    }
  }
>
  <AnimatedComponent
    style={
      Object {
        "alignItems": "center",
        "borderColor": "#86939e",
        "borderRadius": 50,
        "borderWidth": 1,
        "flexDirection": "row",
        "paddingBottom": 4,
        "paddingLeft": 12,
        "paddingRight": 12,
        "paddingTop": 4,
        "transform": Array [
          Object {
            "translateX": 0,
          },
        ],
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      style={
        Object {
          "alignSelf": "center",
          "color": "black",
          "flex": 1,
          "fontSize": 18,
          "minHeight": 40,
          "width": 200,
        }
      }
      testID="RNE__Input__text-input"
      underlineColorAndroid="transparent"
    />
  </AnimatedComponent>
</Component>
`;

exports[`Input component Props label and styles label 1`] = `
<Component
  style={
    Object {
      "paddingHorizontal": 10,
      "width": "100%",
    }
  }
>
  <Component
    style={
      Object {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "marginBottom": -10,
        "zIndex": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "backgroundColor": "#fff",
          "color": "#86939e",
          "fontSize": 16,
          "fontWeight": "bold",
          "paddingLeft": 2,
          "paddingRight": 2,
          "transform": Array [
            Object {
              "translateX": -23,
            },
          ],
        }
      }
    >
      My Label
    </Text>
  </Component>
  <AnimatedComponent
    style={
      Object {
        "alignItems": "center",
        "borderColor": "#86939e",
        "borderRadius": 50,
        "borderWidth": 1,
        "flexDirection": "row",
        "paddingBottom": 3,
        "paddingLeft": 12,
        "paddingRight": 12,
        "paddingTop": 5,
        "transform": Array [
          Object {
            "translateX": 0,
          },
        ],
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      style={
        Object {
          "alignSelf": "center",
          "color": "black",
          "flex": 1,
          "fontSize": 18,
          "minHeight": 40,
        }
      }
      testID="RNE__Input__text-input"
      underlineColorAndroid="transparent"
    />
  </AnimatedComponent>
</Component>
`;

exports[`Input component Props label and styles label as component 1`] = `
<Component
  style={
    Object {
      "paddingHorizontal": 10,
      "width": "100%",
    }
  }
>
  <Component
    style={
      Object {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "marginBottom": -10,
        "zIndex": 10,
      }
    }
  >
    <Image
      source={
        Object {
          "uri": "http://google.com",
        }
      }
    />
  </Component>
  <AnimatedComponent
    style={
      Object {
        "alignItems": "center",
        "borderColor": "#86939e",
        "borderRadius": 50,
        "borderWidth": 1,
        "flexDirection": "row",
        "paddingBottom": 3,
        "paddingLeft": 12,
        "paddingRight": 12,
        "paddingTop": 5,
        "transform": Array [
          Object {
            "translateX": 0,
          },
        ],
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      style={
        Object {
          "alignSelf": "center",
          "color": "black",
          "flex": 1,
          "fontSize": 18,
          "minHeight": 40,
        }
      }
      testID="RNE__Input__text-input"
      underlineColorAndroid="transparent"
    />
  </AnimatedComponent>
</Component>
`;

exports[`Input component Props label and styles labelStyle 1`] = `
<Component
  style={
    Object {
      "paddingHorizontal": 10,
      "width": "100%",
    }
  }
>
  <Component
    style={
      Object {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "marginBottom": -10,
        "zIndex": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "backgroundColor": "#fff",
          "color": "#86939e",
          "fontSize": 16,
          "fontWeight": "bold",
          "paddingLeft": 2,
          "paddingRight": 2,
          "transform": Array [
            Object {
              "translateX": -23,
            },
          ],
          "width": 200,
        }
      }
    >
      My Label
    </Text>
  </Component>
  <AnimatedComponent
    style={
      Object {
        "alignItems": "center",
        "borderColor": "#86939e",
        "borderRadius": 50,
        "borderWidth": 1,
        "flexDirection": "row",
        "paddingBottom": 3,
        "paddingLeft": 12,
        "paddingRight": 12,
        "paddingTop": 5,
        "transform": Array [
          Object {
            "translateX": 0,
          },
        ],
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      style={
        Object {
          "alignSelf": "center",
          "color": "black",
          "flex": 1,
          "fontSize": 18,
          "minHeight": 40,
        }
      }
      testID="RNE__Input__text-input"
      underlineColorAndroid="transparent"
    />
  </AnimatedComponent>
</Component>
`;

exports[`Input component Props leftIcon and styles leftIcon 1`] = `
<Component
  style={
    Object {
      "paddingHorizontal": 10,
      "width": "100%",
    }
  }
>
  <AnimatedComponent
    style={
      Object {
        "alignItems": "center",
        "borderColor": "#86939e",
        "borderRadius": 50,
        "borderWidth": 1,
        "flexDirection": "row",
        "paddingBottom": 4,
        "paddingLeft": 12,
        "paddingRight": 12,
        "paddingTop": 4,
        "transform": Array [
          Object {
            "translateX": 0,
          },
        ],
      }
    }
  >
    <Component
      style={
        Object {
          "alignItems": "center",
          "height": 40,
          "justifyContent": "center",
          "marginLeft": 15,
        }
      }
    >
      <Themed.Icon
        name="user"
        type="feather"
      />
    </Component>
    <TextInput
      allowFontScaling={true}
      style={
        Object {
          "alignSelf": "center",
          "color": "black",
          "flex": 1,
          "fontSize": 18,
          "minHeight": 40,
        }
      }
      testID="RNE__Input__text-input"
      underlineColorAndroid="transparent"
    />
  </AnimatedComponent>
</Component>
`;

exports[`Input component Props leftIcon and styles leftIconContainerStyle 1`] = `
<Component
  style={
    Object {
      "paddingHorizontal": 10,
      "width": "100%",
    }
  }
>
  <AnimatedComponent
    style={
      Object {
        "alignItems": "center",
        "borderColor": "#86939e",
        "borderRadius": 50,
        "borderWidth": 1,
        "flexDirection": "row",
        "paddingBottom": 4,
        "paddingLeft": 12,
        "paddingRight": 12,
        "paddingTop": 4,
        "transform": Array [
          Object {
            "translateX": 0,
          },
        ],
      }
    }
  >
    <Component
      style={
        Object {
          "alignItems": "center",
          "height": 40,
          "justifyContent": "center",
          "marginLeft": 15,
          "width": 200,
        }
      }
    >
      <Themed.Icon
        name="user"
        type="feather"
      />
    </Component>
    <TextInput
      allowFontScaling={true}
      style={
        Object {
          "alignSelf": "center",
          "color": "black",
          "flex": 1,
          "fontSize": 18,
          "minHeight": 40,
        }
      }
      testID="RNE__Input__text-input"
      underlineColorAndroid="transparent"
    />
  </AnimatedComponent>
</Component>
`;

exports[`Input component Props placeholder 1`] = `
<Component
  style={
    Object {
      "paddingHorizontal": 10,
      "width": "100%",
    }
  }
>
  <AnimatedComponent
    style={
      Object {
        "alignItems": "center",
        "borderColor": "#86939e",
        "borderRadius": 50,
        "borderWidth": 1,
        "flexDirection": "row",
        "paddingBottom": 4,
        "paddingLeft": 12,
        "paddingRight": 12,
        "paddingTop": 4,
        "transform": Array [
          Object {
            "translateX": 0,
          },
        ],
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      placeholder="My Placeholder"
      style={
        Object {
          "alignSelf": "center",
          "color": "black",
          "flex": 1,
          "fontSize": 18,
          "minHeight": 40,
        }
      }
      testID="RNE__Input__text-input"
      underlineColorAndroid="transparent"
    />
  </AnimatedComponent>
</Component>
`;

exports[`Input component Props rightIcon and styles rightIcon 1`] = `
<Component
  style={
    Object {
      "paddingHorizontal": 10,
      "width": "100%",
    }
  }
>
  <AnimatedComponent
    style={
      Object {
        "alignItems": "center",
        "borderColor": "#86939e",
        "borderRadius": 50,
        "borderWidth": 1,
        "flexDirection": "row",
        "paddingBottom": 4,
        "paddingLeft": 12,
        "paddingRight": 12,
        "paddingTop": 4,
        "transform": Array [
          Object {
            "translateX": 0,
          },
        ],
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      style={
        Object {
          "alignSelf": "center",
          "color": "black",
          "flex": 1,
          "fontSize": 18,
          "minHeight": 40,
        }
      }
      testID="RNE__Input__text-input"
      underlineColorAndroid="transparent"
    />
    <Component
      style={
        Object {
          "alignItems": "center",
          "height": 40,
          "justifyContent": "center",
          "marginLeft": 15,
        }
      }
    >
      <Themed.Icon
        name="user"
        type="feather"
      />
    </Component>
  </AnimatedComponent>
</Component>
`;

exports[`Input component Props rightIcon and styles rightIconContainerStyle 1`] = `
<Component
  style={
    Object {
      "paddingHorizontal": 10,
      "width": "100%",
    }
  }
>
  <AnimatedComponent
    style={
      Object {
        "alignItems": "center",
        "borderColor": "#86939e",
        "borderRadius": 50,
        "borderWidth": 1,
        "flexDirection": "row",
        "paddingBottom": 4,
        "paddingLeft": 12,
        "paddingRight": 12,
        "paddingTop": 4,
        "transform": Array [
          Object {
            "translateX": 0,
          },
        ],
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      style={
        Object {
          "alignSelf": "center",
          "color": "black",
          "flex": 1,
          "fontSize": 18,
          "minHeight": 40,
        }
      }
      testID="RNE__Input__text-input"
      underlineColorAndroid="transparent"
    />
    <Component
      style={
        Object {
          "alignItems": "center",
          "height": 40,
          "justifyContent": "center",
          "marginLeft": 15,
          "width": 200,
        }
      }
    >
      <Themed.Icon
        name="user"
        type="feather"
      />
    </Component>
  </AnimatedComponent>
</Component>
`;

exports[`Input component should apply values from theme 1`] = `
<View
  style={
    Object {
      "paddingHorizontal": 10,
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderColor": "#86939e",
        "borderRadius": 50,
        "borderWidth": 1,
        "flexDirection": "row",
        "paddingBottom": 4,
        "paddingLeft": 12,
        "paddingRight": 12,
        "paddingTop": 4,
        "transform": Array [
          Object {
            "translateX": 0,
          },
        ],
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      placeholder="Enter text"
      style={
        Object {
          "alignSelf": "center",
          "color": "black",
          "flex": 1,
          "fontSize": 18,
          "minHeight": 40,
        }
      }
      testID="RNE__Input__text-input"
      underlineColorAndroid="transparent"
      updateTheme={[Function]}
    />
  </View>
</View>
`;

exports[`Input component should match snapshot 1`] = `
<Component
  style={
    Object {
      "paddingHorizontal": 10,
      "width": "100%",
    }
  }
>
  <AnimatedComponent
    style={
      Object {
        "alignItems": "center",
        "borderColor": "#86939e",
        "borderRadius": 50,
        "borderWidth": 1,
        "flexDirection": "row",
        "paddingBottom": 4,
        "paddingLeft": 12,
        "paddingRight": 12,
        "paddingTop": 4,
        "transform": Array [
          Object {
            "translateX": 0,
          },
        ],
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      style={
        Object {
          "alignSelf": "center",
          "color": "black",
          "flex": 1,
          "fontSize": 18,
          "minHeight": 40,
        }
      }
      testID="RNE__Input__text-input"
      underlineColorAndroid="transparent"
    />
  </AnimatedComponent>
</Component>
`;
